added text to html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Let's see if this works</h1>
+    <h2>Let's see if this works</h2>
+    <h3>Let's see if this works</h3>
+    <h4>Let's see if this works</h4>
+    <h5>Let's see if this works</h5>
+    <h6>Let's see if this works</h6>
 </body>
 </html>
