--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Test</title>
 </head>
 <body>
+
+    <!-- Creating heading from h1 to h6  -->
     <h1>Let's see if this works</h1>
     <h2>Let's see if this works</h2>
     <h3>Let's see if this works</h3>
@@ -13,6 +15,12 @@
     <h5>Let's see if this works</h5>
     <h6>Let's see if this works</h6>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facilis excepturi, nostrum laudantium magni nisi cum repellendus ipsum quos neque provident molestias! Quo, dicta dolores. Eum praesentium mollitia molestiae eligendi!</p>
+    <!-- Creating a paragraph  -->
+    <p>
+        Lorem ipsum dolor sit amet <strong>adipisicing</strong> elit. Dolor facilis excepturi, 
+        nostrum laudantium magni nisi cum <b>repellendus</b> ipsum quos neque provident molestias! 
+        Quo, dicta dolores. Eum <em>praesentium</em> mollitia molestiae 
+        eligendi!
+    </p>
 </body>
 </html>
