--- a/index.html
+++ b/index.html
@@ -22,5 +22,26 @@
         Quo, dicta dolores. Eum <em>praesentium</em> mollitia molestiae 
         eligendi!
     </p>
+
+
+    <!-- List -->
+    <ul>
+        <li>Banana</li>
+        <li>Apple</li>
+        <li>Pear</li>
+        <li>Grape</li>
+        <li>Orange</li>
+        <li>Lemon</li>
+    </ul>
+
+    <!-- Ordered List -->
+    <ol>
+        <li>Banana</li>
+        <li>Apple</li>
+        <li>Pear</li>
+        <li>Grape</li>
+        <li>Orange</li>
+        <li>Lemon</li>
+    </ol>
 </body>
 </html>
