--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
         <li>Orange</li>
         <li>Lemon</li>
     </ol>
+    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
 </body>
 </html>
