--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
 <body>
 
     <!-- Creating heading from h1 to h6  -->
-    <h1>Let's see if this works</h1>
-    <h2>Let's see if this works</h2>
-    <h3>Let's see if this works</h3>
-    <h4>Let's see if this works</h4>
-    <h5>Let's see if this works</h5>
-    <h6>Let's see if this works</h6>
-    <a href="#scrolldown">
-        <button>Scroll Down</button>
-    </a>
+    <h1>About Me </h1>
+
 
     <!-- Creating a paragraph  -->
     <p>
-        Lorem ipsum dolor sit amet <strong>adipisicing</strong> elit. Dolor facilis excepturi, 
-        nostrum laudantium magni nisi cum <b>repellendus</b> ipsum quos neque provident molestias! 
-        Quo, dicta dolores. Eum <em>praesentium</em> mollitia molestiae 
-        eligendi!
+        My name is <strong>Nelisa Maqungo </strong> from Pietermaritzburg in Natal.
+        Easy going personality. I enjoy watching documentaries and reading up on conspiracy theories.
     </p>
 
 
