--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </p>
 
 
-    <!-- List -->
+    <!-- List of Hobbies-->
+    <h4>Hobbies include: </h4>
     <ul>
-        <li>Banana</li>
-        <li>Apple</li>
-        <li>Pear</li>
-        <li>Grape</li>
-        <li>Orange</li>
-        <li>Lemon</li>
+        <li>Cooking</li>
+        <li>Food styling</li>
+        <li>Travelling</li>
+        <li>Playing Laser Tag</li>
+        <li>Watching Basketball</li>
     </ul>
 
     <!-- Ordered List -->
