--- a/index.html
+++ b/index.html
@@ -56,6 +56,59 @@
                 <img src="images/dora.jpg">
             </a>
         </li>
-    </ol>    
+    </ol>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Address</th>
+        </tr>
+        <tr>
+            <td>Sharon</td>
+            <td>Litye</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Henry</td>
+            <td>Javangwe</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Prince</td>
+            <td></td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Gershon</td>
+            <td>Alexandre</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Paul</td>
+            <td>Seremu</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Jean-Marie</td>
+            <td>Van Riet</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Zimasa</td>
+            <td>Ngqetsu</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Gerson</td>
+            <td>Kortjie</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+        <tr>
+            <td>Barnaby</td>
+            <td>Davids</td>
+            <td>Claremont, Cape Town</td>
+        </tr>
+    </table>
 </body>
 </html>
