--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
 
         <li>Chicago <br>
             <a href="https://www.imdb.com/title/tt0299658/" target="_blank">
-                <img src="images/chicago.jpg">
+                <img src="images/chicago.jpg" alt="Movie Image">
             </a>
         </li>
         <li>The Breakfast Club<br>
             <a href="https://www.imdb.com/title/tt0088847/" target="_blank">
-                <img src="images/breakfast_club.jpg">
+                <img src="images/breakfast_club.jpg" alt="Movie Image">
             </a> 
         </li>
         <li>John Wick: Chapter 3 - Parabellum <br>
             <a href="https://www.imdb.com/title/tt6146586/" target="_blank">
-                <img src="images/john_wick3.jpg">
+                <img src="images/john_wick3.jpg" alt="Movie Image">
             </a>
         </li>
         <li>Frozen 2 <br>
             <a href="https://www.imdb.com/title/tt4520988/" target="_blank">
-                <img src="images/frozen2.jpg">
+                <img src="images/frozen2.jpg" alt="Movie Image">
             </a>
         </li>
         <li>
             Dora and The Lost City Of Gold <br>
             <a href="https://www.imdb.com/title/tt7547410/" target="_blank">
-                <img src="images/dora.jpg">
+                <img src="images/dora_the_lost.jpg" alt="Movie Image">
             </a>
         </li>
     </ol>
