css inline styling

--- a/index.html
+++ b/index.html
@@ -120,7 +120,27 @@
     </table>
 
     <form action="" method="">
-        <input type="text" placeholder="enter your firstname" name="firstname">
+        <label>Name : </label>
+        <!-- Username -->
+        <input type="text" placeholder="enter your firstname" name="firstname" required>
+        <!-- Email -->
+        <input type="email" placeholder="youremail@example.com" id="">
+        <!--Telephone-->
+        <input type="tel" placeholder="0123456789" name="telephone">
+        <!-- Submit Information -->
+        <input type="button" value="submit" name="submit">
+        <!-- Password -->
+        <input type="password" placeholder="enter password" name="password" id="" >
+        <!-- Checkbox -->
+        <input type="checkbox" name="" id=""> <label> terms and conditions</label>
+        <!-- Textarea -->
+        <Textarea></Textarea>
     </form>
+
+    <h1 >INLINE</h1>
+    <h1 >INLINE</h1>
+    <h1 style="color: #bada55" >INLINE</h1>
+    <h1 >INLINE</h1>
+    <h1 >INLINE</h1>
 </body>
 </html>
